# LlamaFold-experiments

./: CLAUDE.md  COMMANDS.md  EXPERIMENTS.md  PLANS.md  README.md  SETUP.md  pyproject.toml
.devcontainer/: Dockerfile
experiments/exp1_distance_matrix/: __init__.py
experiments/exp1_distance_matrix/src/: __init__.py  data.py  model.py  reconstruct.py  train.py
experiments/exp1_distance_matrix/tests/: __init__.py  test_data.py  test_model.py  test_reconstruct.py  test_train.py
experiments/exp1b_distance_matrix_1b/src/: data.py  train.py
experiments/exp1b_distance_matrix_1b/tests/: test_data.py  test_train.py
experiments/exp1c_distance_matrix_decimal/src/: data.py  train.py
experiments/exp2_residue_infilling/: __init__.py
experiments/exp3_structure_prediction/: __init__.py
experiments/exp4_contact_prediction/: METRICS.md  rollout_perplexity.ipynb  sampling_strategies.ipynb  visualize_contacts.ipynb
experiments/exp5_contact_prediction/: benchmark_analysis.ipynb  fsdp_config.json  inference_strategies_7bny.ipynb  interactive_generation.ipynb  rollout_diagnostics.ipynb  visualize_contacts.ipynb  visualize_contacts_7bny.ipynb  visualize_contacts_executed.ipynb  visualize_contacts_mpnn.ipynb  visualize_contacts_msa_7bny.ipynb
experiments/exp6_contact_prediction/: analyze_checkpoint.ipynb  analyze_checkpoint_executed.ipynb
outputs/exp1_quick/: best_model.pt  results.json
scripts/: analyze_cluster_limits.py  benchmark_esmfold.py  benchmark_exp5.py  bio2token_preprocess.py  contact_search.py
shared/: __init__.py
shared/src/: __init__.py
(+13 files in other folders)
